--- a/index.html
+++ b/index.html
@@ -6,31 +6,17 @@
     <title>AI Automation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
       body {
         font-family: 'Quicksand', sans-serif;
       }
+      /* Custom Scrollbar for the chat area */
       .scrollbar-hide::-webkit-scrollbar {
           display: none;
       }
       .scrollbar-hide {
           -ms-overflow-style: none;
           scrollbar-width: none;
-      }
-      #error-boundary {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(255, 255, 255, 0.95);
-        color: #ef4444;
-        z-index: 9999;
-        padding: 2rem;
-        overflow: auto;
-        font-family: monospace;
       }
       #root:empty::before {
         content: 'Loading AI Automation...';
@@ -41,50 +27,35 @@
         font-family: 'Quicksand', sans-serif;
       }
     </style>
-    
+    <!-- Polyfill for process.env to prevent crashes in browser environments -->
     <script>
-      window.onerror = function(msg, url, lineNo, columnNo, error) {
-        var container = document.getElementById('error-boundary');
-        if (container) {
-          container.style.display = 'block';
-          var message = [
-            'Message: ' + msg,
-            'URL: ' + url,
-            'Line: ' + lineNo,
-            'Column: ' + columnNo,
-            'Error object: ' + JSON.stringify(error)
-          ].join('<br>');
-          container.innerHTML += '<div style="border-bottom:1px solid #ccc; padding:10px;"><strong>Error:</strong><br>' + message + '</div>';
-        }
-        return false;
-      };
-
-      window.process = window.process || { 
-        env: { 
-          NODE_ENV: 'production',
-          API_KEY: '' 
-        } 
-      };
+      window.process = window.process || { env: { NODE_ENV: 'production' } };
     </script>
     <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@18.2.0",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "react-dom": "https://esm.sh/react-dom@18.2.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@18.2.0",
-    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/"
-  }
-}
-</script>
-  </head>
+    {
+      "imports": {
+        "react": "https://esm.sh/react@18.2.0",
+        "react/": "https://esm.sh/react@18.2.0/",
+        "react-dom": "https://esm.sh/react-dom@18.2.0",
+        "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+        "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@18.2.0",
+        "@google/genai": "https://esm.sh/@google/genai"
+      }
+    }
+    </script>
+</head>
   <body class="bg-slate-50 text-slate-800 antialiased">
-    <div id="error-boundary">
-      <h2 style="font-size:1.5rem; font-weight:bold; margin-bottom: 1rem;">Something went wrong:</h2>
-    </div>
     <div id="root"></div>
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
+    <script>
+      window.onerror = function(message, source, lineno, colno, error) {
+        console.error("Global Error:", message, error);
+        // Only show alert if root is still empty (app failed to mount)
+        if (document.getElementById('root').childElementCount === 0) {
+           console.warn("App failed to mount. Please check the console for details.");
+        }
+      };
+    </script>
   </body>
 </html>
