--- a/index.html
+++ b/index.html
@@ -27,35 +27,24 @@
         font-family: 'Quicksand', sans-serif;
       }
     </style>
-    <!-- Polyfill for process.env to prevent crashes in browser environments -->
+    <!-- Polyfill for process.env to ensure compatibility -->
     <script>
       window.process = window.process || { env: { NODE_ENV: 'production' } };
     </script>
-    <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@18.2.0",
-        "react/": "https://esm.sh/react@18.2.0/",
-        "react-dom": "https://esm.sh/react-dom@18.2.0",
-        "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-        "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@18.2.0",
-        "@google/genai": "https://esm.sh/@google/genai"
-      }
-    }
-    </script>
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.574.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.42.0"
+  }
+}
+</script>
 </head>
   <body class="bg-slate-50 text-slate-800 antialiased">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
-    <script>
-      window.onerror = function(message, source, lineno, colno, error) {
-        console.error("Global Error:", message, error);
-        // Only show alert if root is still empty (app failed to mount)
-        if (document.getElementById('root').childElementCount === 0) {
-           console.warn("App failed to mount. Please check the console for details.");
-        }
-      };
-    </script>
   </body>
 </html>
